--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,12 @@ html, body {
   font-family: 'Abel', sans-serif;
 }
 
+.loading {
+  font-size: 1rem;
+}
+
 .section-title {
-  font-size: 4rem;
+  font-size: 3rem;
   -webkit-align-self: center;
       -ms-flex-item-align: center;
           align-self: center;
