Begin adding in remaining showcases.

--- a/css/style.css
+++ b/css/style.css
@@ -232,7 +232,7 @@ html, body {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   box-sizing: border-box;
   font-size: 1em;
   text-align: left;
