--- a/css/style.css
+++ b/css/style.css
@@ -35,18 +35,6 @@ html, body {
   font-size: 1rem;
 }
 
-@media (max-width: 500px) {
-  .section-title {
-    font-size: 2.5rem;
-  }
-}
-
-@media (max-width: 715px) {
-  p {
-    font-size: 0.9em;
-  }
-}
-
 /* Sections */
 /* ======== */
 .section-title {
@@ -54,8 +42,14 @@ html, body {
   align-self: center;
   text-align: center;
   margin: auto;
-  padding: 0.5em 0;
+  padding: 1.5rem 0;
   font-family: 'Bungee Hairline', system-ui;
+}
+
+@media (max-width: 500px) {
+  .section-title {
+    font-size: 2.5rem;
+  }
 }
 
 .landing-section {
@@ -75,23 +69,6 @@ html, body {
 
 /* Landing Section */
 /* =============== */
-#canvas {
-  position: absolute;
-  z-index: 1;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  top: 0;
-  opacity: 0.3;
-}
-
-@media (max-device-width: 1024px) {
-  #canvas {
-    display: none;
-  }
-}
-
 .word-wrapper {
   width: 100%;
   height: auto;
@@ -105,23 +82,24 @@ html, body {
   font-family: 'Abel', sans-serif;
   font-size: 5rem;
   display: inline-block;
-  margin: 0.1em;
+  margin: 0.5rem;
 }
 
 @media (max-width: 480px) {
   .first, .last {
-    font-size: 3rem;
+    font-size: 3.5rem;
+    margin: 0.3rem;
   }
 }
 
 .first {
-  animation: fade-down 1.5s ease-out forwards;
+  animation: fade-down 1.5s ease forwards;
   opacity: 0;
   z-index: 3;
 }
 
 .last {
-  animation: fade-up 1.5s ease-out forwards;
+  animation: fade-up 1.5s ease forwards;
   opacity: 0;
   z-index: 3;
 }
@@ -129,14 +107,14 @@ html, body {
 .cipher {
   font-family: 'Bungee Hairline', system-ui;
   font-size: 1.8rem;
-  animation: fade-in 1.5s ease-out 1s forwards;
+  animation: fade-in 700ms ease-out 1.5s forwards;
   opacity: 0;
   z-index: 3;
 }
 
 @media (max-width: 480px) {
   .cipher {
-    font-size: 1rem;
+    font-size: 1.3rem;
   }
 }
 
@@ -144,6 +122,8 @@ html, body {
   font-size: 2rem;
   color: #454851;
   z-index: 3;
+  opacity: 0;
+  animation: fade-down 1s ease 2s forwards;
 }
 .arrow:hover {
   cursor: pointer;
@@ -155,7 +135,7 @@ html, body {
 .section-content {
   width: 100%;
   height: auto;
-  padding: 1rem;
+  padding: 0 1rem;
   box-sizing: border-box;
   display: flex;
   flex-flow: row wrap;
@@ -166,7 +146,7 @@ html, body {
 .showcase {
   max-width: 400px;
   min-width: 300px;
-  margin: 1em;
+  margin: 1.5rem;
   height: auto;
   display: flex;
   flex-flow: row wrap;
@@ -186,8 +166,8 @@ html, body {
 .showcase-title h3 {
   font-family: 'Abel', sans-serif;
   text-align: left;
-  padding: 0.3em;
-  margin: 0.1em auto;
+  padding: 0.5rem;
+  margin: 0.2rem auto;
 }
 
 .showcase-title .underbar {
@@ -228,15 +208,19 @@ html, body {
   width: 100%;
   height: auto;
   margin: auto;
-  padding: 0 0.5em;
+  padding: 0 0.5rem;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   align-items: flex-start;
   box-sizing: border-box;
-  font-size: 1em;
+  font-size: 1rem;
   text-align: left;
   font-family: 'Pontano Sans', sans-serif;
+}
+
+.showcase-details p {
+  line-height: 1.5;
 }
 
 .info-link {
@@ -253,7 +237,7 @@ html, body {
 .bio-section {
   width: 100%;
   height: auto;
-  padding: 0 1em 5em 1em;
+  padding: 0 1rem 5rem 1rem;
   font-size: 1rem;
   box-sizing: border-box;
   display: flex;
@@ -264,7 +248,7 @@ html, body {
 
 @media (max-width: 350px) {
   .bio-section {
-    padding: 0 0 5em 0;
+    padding: 0 0 5rem 0;
   }
 }
 
@@ -272,7 +256,7 @@ html, body {
   width: 100%;
   max-width: 700px;
   margin: 0;
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
@@ -306,7 +290,7 @@ html, body {
 .bio-details {
   width: 50%;
   min-width: 300px;
-  margin: 0 0 0 1em;
+  margin: 0 0 0 1rem;
 }
 
 .bio-details p {
@@ -314,13 +298,14 @@ html, body {
   margin: 0;
   height: auto;
   font-family: 'Pontano Sans', sans-serif;
+  line-height: 1.5;
 }
 
 .bio-details .links {
   width: 100%;
   height: auto;
   margin: 0;
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
@@ -340,7 +325,7 @@ html, body {
   }
 
   .bio-details .links {
-    margin: 1em auto;
+    margin: 1rem auto;
   }
 }
 
@@ -390,6 +375,13 @@ html, body {
   font-weight: bold;
 }
 
+@media (max-width: 715px) {
+  p {
+    font-size: 0.9rem;
+  }
+}
+
+
 /* Animations */
 /* ========== */
 @keyframes fade-in {
@@ -404,21 +396,21 @@ html, body {
 @keyframes fade-down {
   0% {
     opacity: 0;
-      transform: translateY(-100%);
+    transform: translateY(-100%);
   }
   100% {
     opacity: 1;
-      transform: translateY(0%);
+    transform: translateY(0%);
   }
 }
 
 @keyframes fade-up {
   0% {
     opacity: 0;
-      transform: translateY(100%);
+    transform: translateY(100%);
   }
   100% {
     opacity: 1;
-      transform: translateY(0%);
+    transform: translateY(0%);
   }
 }
